--- a/libraries/lib_cipherlock_entity/pom.xml
+++ b/libraries/lib_cipherlock_entity/pom.xml
@@ -9,10 +9,10 @@
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>org.cipherlock</groupId>
-	<artifactId>ws_cipherlock_user</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
-	<name>ws_cipherlock_user</name>
-	<description>ws_cipherlock_user</description>
+	<artifactId>lib_cipherlock_entity</artifactId>
+	<version>LOCAL-SNAPSHOT</version>
+	<name>lib_cipherlock_entity</name>
+	<description>lib_cipherlock_entity</description>
 	<url/>
 	<licenses>
 		<license/>
@@ -28,23 +28,13 @@
 	</scm>
 	<properties>
 		<java.version>22</java.version>
-		<lib.cipherlock.entity.version>LOCAL-SNAPSHOT</lib.cipherlock.entity.version>
 	</properties>
 	<dependencies>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
 		</dependency>
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-web</artifactId>
-		</dependency>
 
-		<dependency>
-			<groupId>com.mysql</groupId>
-			<artifactId>mysql-connector-j</artifactId>
-			<scope>runtime</scope>
-		</dependency>
 		<dependency>
 			<groupId>org.projectlombok</groupId>
 			<artifactId>lombok</artifactId>
@@ -55,12 +45,32 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
-
 		<dependency>
-			<groupId>org.cipherlock</groupId>
-			<artifactId>lib_cipherlock_entity</artifactId>
-			<version>${lib.cipherlock.entity.version}</version>
+			<groupId>jakarta.persistence</groupId>
+			<artifactId>jakarta.persistence-api</artifactId>
+			<version>3.2.0</version>
 		</dependency>
+		<dependency>
+			<groupId>com.fasterxml.jackson.core</groupId>
+			<artifactId>jackson-databind</artifactId>
+			<version>2.17.1</version>
+		</dependency>
+		<dependency>
+			<groupId>jakarta.validation</groupId>
+			<artifactId>jakarta.validation-api</artifactId>
+			<version>3.0.2</version>
+		</dependency>
+		<dependency>
+			<groupId>org.hibernate.validator</groupId>
+			<artifactId>hibernate-validator</artifactId>
+			<version>7.0.4.Final</version>
+		</dependency>
+		<dependency>
+			<groupId>org.glassfish</groupId>
+			<artifactId>jakarta.el</artifactId>
+			<version>4.0.2</version>
+		</dependency>
+
 	</dependencies>
 
 	<build>
