--- a/libraries/lib_cipherlock_crypto/pom.xml
+++ b/libraries/lib_cipherlock_crypto/pom.xml
@@ -15,6 +15,7 @@
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <maven.compiler.source>22</maven.compiler.source>
     <maven.compiler.target>22</maven.compiler.target>
+    <lib.cipherlock.dto.version>LOCAL-SNAPSHOT</lib.cipherlock.dto.version>
   </properties>
 
   <dependencies>
@@ -50,6 +51,35 @@
       <artifactId>lombok</artifactId>
       <version>1.18.32</version>
       <scope>provided</scope>
+    </dependency>
+
+    <dependency>
+      <groupId>org.cipherlock</groupId>
+      <artifactId>lib_cipherlock_dto</artifactId>
+      <version>${lib.cipherlock.dto.version}</version>
+    </dependency>
+
+    <dependency>
+      <groupId>javax.xml.bind</groupId>
+      <artifactId>jaxb-api</artifactId>
+      <version>2.3.1</version>
+    </dependency>
+    <dependency>
+      <groupId>org.bouncycastle</groupId>
+      <artifactId>bcprov-jdk18on</artifactId>
+      <version>1.78.1</version>
+    </dependency>
+
+    <dependency>
+      <groupId>org.passay</groupId>
+      <artifactId>passay</artifactId>
+      <version>1.6.4</version>
+    </dependency>
+
+    <dependency>
+      <groupId>com.nulab-inc</groupId>
+      <artifactId>zxcvbn</artifactId>
+      <version>1.9.0</version>
     </dependency>
 
     <!-- Add other dependencies as needed -->
